# Enterprise-Data-Access-and-Relationship-Graph-Architecture

./: README.md  local_first_governed_enterprise_control_plane_readme (1).md  local_first_governed_enterprise_control_plane_readme.md
beta/: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  demo.py  docker-compose.yml  pyproject.toml
beta/.claude/: launch.json
beta/docs/: ARCHITECTURE.md  OPERATIONS.md  overview.html
beta/src/eda/: __init__.py  access_graph.py  actions.py  api.py  audit.py  broker.py  config.py  db.py  feedback.py  gateway.py  identity.py  identity_providers.py  ingestion.py  models.py  objects.py  policy.py  runner.py  seed.py
beta/src/eda/adapters/: __init__.py  okta.py
beta/tests/: conftest.py  test_access_graph.py  test_actions_runner.py  test_admin_and_tenant.py  test_approvals.py  test_audit.py  test_audit_hardening.py  test_broker.py  test_end_to_end.py  test_feedback.py  test_identity_mapping.py  test_ingestion.py  test_objects.py  test_oidc.py  test_policy.py  test_policy_lifecycle.py
