[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-control-plane"
version = "0.1.0"
description = "Local-first governed enterprise control plane: access graph, policy engine, authority broker, object graph, governed actions, hash-chained audit, local AI feedback loop"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
postgres = ["psycopg2-binary>=2.9"]
aws = ["boto3>=1.34"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
